--- a/objectledge-demo-minimal/src/main/webapp/index.html
+++ b/objectledge-demo-minimal/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<meta http-equiv="Refresh" content="0; URL=ledge/view/foo">
+<meta http-equiv="Refresh" content="0; URL=ledge/view/foo.Foo">
 </head>
 </html>
